<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oranyee"
    tools:context="com.moxspoy.mnurilmanbaehaqi.holodist.MenuActivity">
    <ImageView
        android:id="@+id/rumah"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/school_bg"/>
    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Holodist Menu"
        android:textSize="30dp"
        android:textColor="@color/putih"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/rumah"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:id="@+id/LLmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvMenu"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/kompetensi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#ff6b81"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_format_list"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/putih"
                    android:text="@string/kompetensi"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/video"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:background="#ff6b81"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_video"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/putih"
                    android:text="@string/video"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:id="@+id/materi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#ff6b81"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_book"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/putih"
                    android:text="@string/materi"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/latihan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:background="#ff6b81"
                android:clickable="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_school"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/putih"
                    android:text="@string/latihan"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#ff6348"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="parent">
        <ImageView
            android:layout_marginStart="30dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/logounj"/>
        <TextView
            android:id="@+id/tvFooter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Dibuat oleh Naily Fitriyah Amala\nUniversitas Negeri Jakarta\n2018"
            android:textSize="10dp"
            android:textColor="@color/putih"
            android:layout_marginTop="12dp"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
